vcluster-use-cases/auto-snapshots/manifests/overlays/local-contained/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
  type: ClusterIP
