vcluster-use-cases/auto-snapshots/manifests/overlays/local-contained/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio.vcp.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio
                port:
                  number: 9090
